--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,14 @@
-<h1>index</h1>
+<h1>Ask Cathy</h1>
+
+{{#if questions}}
+<div>
+    {{#each questions}}
+    <div>
+        <a href="/question/{{id}}">Title: {{title}}</a>
+        <p>Question: {{description}}</p>
+    </div>
+    {{/each}}
+</div>
+{{/if}}
+
+<a href="/question/new"> Add Question</a>
