--- a/views/question/new.hbs
+++ b/views/question/new.hbs
@@ -1,1 +1,15 @@
-<h1>new</h1>
+<h1> Add a New Question</h1>
+
+<form action="/question" method="post">
+    <p>
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title">
+    </p>
+    <p>
+        <label for="description">Description:</label>
+        <textarea name="description" id="description" cols="30" rows="10"></textarea>
+    </p>
+    <p>
+        <input type="submit" value="Save">
+    </p>
+</form>
