--- a/views/question/edit.hbs
+++ b/views/question/edit.hbs
@@ -1,1 +1,15 @@
-<h1>edit</h1>
+<h1>Edit Question</h1>
+
+<form action="/question/{{question.id}}?_method=PUT" method="post">
+    <p>
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title" value="{{question.title}}">
+    </p>
+    <p>
+        <label for="description">Description:</label>
+        <textarea name="description" id="description" cols="30" rows="10">{{question.description}}</textarea>
+    </p>
+    <p>
+        <input type="submit" value="Save">
+    </p>
+</form>
