--- a/views/question/show.hbs
+++ b/views/question/show.hbs
@@ -6,3 +6,13 @@
         <input type="submit" value="Edit">
     </p>
 </form>
+
+<form action="/question/{{question.id}}?_method=DELETE" method="post">
+    <input type="submit" value="Delete">
+</form>
+
+<form action="/">
+    <p>
+        <input type="submit" value="Home">
+    </p>
+</form>
