add views for user

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,8 +21,8 @@
                     </li>
                     <li><a href="/user/logout">Log Out</a></li>
                     {{else}}
-                    <li><a href="/user/login">Sign Up</a></li>
-                    <li><a href="/user/sign-up">Log In</a></li>
+                    <li><a href="/user/signup">Sign Up</a></li>
+                    <li><a href="/user/login">Log In</a></li>
                     {{/if}}
                 </ul>
             </div>
