--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,19 +1,25 @@
 <h3>LOG IN:</h3>
 <br>
 <br>
-<form action="/login" method="post" class="col s12">
-    <form class="col s12">
+
+<div class="row">
+    <form action="/login" method="post" class="col s12">
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Username" id="username" type="text" class="validate">
+                <input placeholder="Username" name="username" id="username" type="text" class="validate">
                 <label for="username"></label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Password" id="password" type="text" class="validate">
+                <input placeholder="Password" name="password" id="password" type="text" class="validate">
                 <label for="password"></label>
             </div>
         </div>
+        <div class="row">
+            <div class="input-field">
+                <input type="submit" value="Log In" class="btn waves-effect waves-light">
+            </div>
+        </div>
     </form>
-    </div>
+</div>
