--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,18 +1,27 @@
 <h3>SIGN UP:</h3>
 <br>
 <br>
+{{#if error}}
+<div class="red light-2">{{error}}</div>
+{{/if}}
+
 <div class="row">
-    <form class="col s12">
+    <form action="/signup" method="post" class="col s12">
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Username" id="username" type="text" class="validate">
+                <input placeholder="Username" name="username" id="username" type="text" class="validate">
                 <label for="username"></label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Password" id="password" type="text" class="validate">
+                <input placeholder="Password" name="password" id="password" type="text" class="validate">
                 <label for="password"></label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field">
+                <input type="submit" value="Sign Up" class="btn waves-effect waves-light">
             </div>
         </div>
     </form>
