--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,12 +17,12 @@
                 <ul class="right">
                     {{#if user}}
                     <li>
-                        <p>Welcome {{user.username}}</p>
+                    <li><a href="#">Welcome {{user.username}}</a></li>
                     </li>
-                    <li><a href="/user/logout">Log Out</a></li>
+                    <li><a href="/logout">Log Out</a></li>
                     {{else}}
-                    <li><a href="/user/signup">Sign Up</a></li>
-                    <li><a href="/user/login">Log In</a></li>
+                    <li><a href="/signup">Sign Up</a></li>
+                    <li><a href="/login">Log In</a></li>
                     {{/if}}
                 </ul>
             </div>
