--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -2,6 +2,10 @@
 <br>
 <br>
 
+{{#if error}}
+<div class="red light-2">{{error}}</div>
+{{/if}}
+
 <div class="row">
     <form action="/login" method="post" class="col s12">
         <div class="row">
